# book_fluent_python

./: .gitignore  CLAUDE.md  README.md  chapter01_python_data_model.md  chapter01_python_data_model.py  chapter02_array_of_sequences.md  chapter02_array_of_sequences.py  chapter02_examples.py  chapter03_dictionaries_and_sets.md  chapter03_dictionaries_and_sets.py  chapter04_unicode_text_versus_bytes.md  chapter04_unicode_text_versus_bytes.py  chapter05_data_class_builders.md  chapter07_functions_first_class_objects.py  chapter08_type_hints_in_functions.py  chapter09_decorators_and_closures.py  chapter1.py  chapter10_Design_Patterns_with_First_Class_Functions.md  chapter10_design_patterns_with_first_class_functions.py  chapter11_a_pythonic_object.md  chapter11_a_pythonic_object.py  chapter12_special_methods_for_sequences.md  chapter12_special_methods_for_sequences.py  chapter13_Interfaces_Protocols_and_ABCs.md  chapter13_interfaces_protocols_and_abcs.py  chapter14_Inheritance_For_Better_or_For_Worse.md  chapter14_inheritance.py  chapter15_more_about_type_hints.md  chapter15_more_about_type_hints.py  chapter16_operator_overloading.md  chapter16_operator_overloading.py  chapter17_iterators_generators_classic_coroutines.md  chapter17_iterators_generators_classic_coroutines.py  chapter17_with_match_and_else_blocks.py  chapter18_concurrency_models_in_python.md  chapter18_concurrency_models_in_python.py  chapter18_with_match_and_else_blocks.md  chapter19_concurrent_executors.py  chapter20_concurrent_executors.md  chapter21_asynchronous_programming.md  (+15 more)
